unpackaged/main/default/objects/Campaign/fields/Active_GCX_User_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_GCX_User_Count__c</fullName>
    <description>US-0007189 [Sub Campaigns] Auto Task Assignment for Marketing Sub Campaigns</description>
    <label>Active GCX User Count</label>
    <summaryFilterItems>
        <field>GCX_User__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>GCX_User__c.Campaign_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>