unpackaged/main/default/objects/Campaign/fields/Agency_Brief__c.field-meta.xml
<CustomField>
    <fullName>Agency_Brief__c</fullName>
    <description>US-0011867</description>
    <inlineHelpText>Brief provided by eBay for agencies.</inlineHelpText>
    <label>Agency Brief</label>
    <type>Url</type>
</CustomField>