unpackaged/main/default/objects/Campaign/fields/Agency_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agency_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Point of Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agency_Point_of_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>