unpackaged/main/default/objects/Campaign/fields/Approved_Or_Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_Or_Rejected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved Or Rejected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CampaignsApprovers</relationshipName>
    <type>Lookup</type>
</CustomField>