unpackaged/main/default/objects/Campaign/fields/Ardira_Survey__c.field-meta.xml
<CustomField>
    <fullName>Ardira_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>related survey field</description>
    <inlineHelpText>Please note that only HIVE Admins can populate Survey ID value.

Open a new &quot;Validate survey&quot; ticket, populate Survey ID and Campaign Information and submit the ticket. Once the HIVE admins validate survey settings, you will be able to create Tasks.</inlineHelpText>
    <label>Survey Vista Id</label>
    <referenceTo>ArdiraSurvey__Survey__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>