unpackaged/main/default/objects/Campaign/fields/Assets_number__c.field-meta.xml
<CustomField>
    <fullName>Assets_number__c</fullName>
    <description>US-0011867</description>
    <label>Assets (number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>