unpackaged/main/default/objects/Campaign/fields/Banner_ID__c.field-meta.xml
<CustomField>
    <fullName>Banner_ID__c</fullName>
    <description>EPH-6706 Update Sub campaign Page Layout</description>
    <label>Banner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>