unpackaged/main/default/objects/Campaign/fields/Business_objective_KPI__c.field-meta.xml
<CustomField>
    <fullName>Business_objective_KPI__c</fullName>
    <defaultValue>&quot;What are you trying to achieve? Please provide business KPIs - e.g. 10k GMV, 10% Adoption	&quot;</defaultValue>
    <label>Business objective/KPI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>