unpackaged/main/default/objects/Campaign/fields/Campaign_Group__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Group__c</fullName>
    <description>US-0007313 - [AU]Assignment for AU Outreach Campaigns</description>
    <inlineHelpText>Campaign Relates to which GCX Group</inlineHelpText>
    <label>Campaign Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group 1</fullName>
            </value>
            <value>
                <fullName>Group 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>