unpackaged/main/default/objects/Campaign/fields/Campaign_Manager__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0011867</description>
    <inlineHelpText>Contact person responsible
 for a campaign from eBay</inlineHelpText>
    <label>Campaign Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CampaignManager</relationshipName>
    <type>Lookup</type>
</CustomField>