unpackaged/main/default/objects/Campaign/fields/Campaign_Priority__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Priority__c</fullName>
    <description>US-0007313 - [AU]Assignment for AU Outreach Campaigns</description>
    <inlineHelpText>P1 = business critical, e.g., compliance, significant change, etc.,

P2 = strategically important (High)

P3 - Medium priority

P4 - Low priority</inlineHelpText>
    <label>Campaign Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>