unpackaged/main/default/objects/Campaign/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <description>EPH-6851 Campaign Record Enhancements</description>
    <inlineHelpText>Type &quot;Admin&quot; enables to create Tasks for sellers with phone-opt out. Please make sure to attach legal approval to do so to the &quot;File&quot; section of this Outreach.</inlineHelpText>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Seller Marketing</fullName>
                <default>true</default>
                <label>Seller Marketing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>