unpackaged/main/default/objects/Campaign/fields/Data_Extension__c.field-meta.xml
<CustomField>
    <fullName>Data_Extension__c</fullName>
    <description>EPH-6851 Campaign Record Enhancements</description>
    <label>Data Extension</label>
    <length>250</length>
    <type>Text</type>
</CustomField>