unpackaged/main/default/objects/Campaign/fields/Datafile_Name__c.field-meta.xml
<CustomField>
    <fullName>Datafile_Name__c</fullName>
    <description>EPH-6706 Update Sub campaign Page Layout</description>
    <label>Datafile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>