unpackaged/main/default/objects/Campaign/fields/EBH_BriefDeadline__c.field-meta.xml
<CustomField>
    <fullName>EBH_BriefDeadline__c</fullName>
    <description>[EBH] (US-0067) : Brief Deadline</description>
    <label>Brief Deadline</label>
    <type>Date</type>
</CustomField>