unpackaged/main/default/objects/Campaign/fields/EBH_CampaignCockpit__c.field-meta.xml
<CustomField>
    <fullName>EBH_CampaignCockpit__c</fullName>
    <description>[EBH] (EPH-2201) - Internal Campaign ID</description>
    <label>Campaign Cockpit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>