unpackaged/main/default/objects/Campaign/fields/EBH_CampaignDurationDays__c.field-meta.xml
<CustomField>
    <fullName>EBH_CampaignDurationDays__c</fullName>
    <description>[EBH] (EPH-1806) - Campaign Duration (Days)</description>
    <formula>EndDate -  StartDate</formula>
    <label>Campaign Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>