unpackaged/main/default/objects/Campaign/fields/EBH_CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>EBH_CancellationReason__c</fullName>
    <description>[EBH] (EPH-2225) -  Cancellation Reason</description>
    <label>Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>