unpackaged/main/default/objects/Campaign/fields/EBH_ChannelMP__c.field-meta.xml
<CustomField>
    <fullName>EBH_ChannelMP__c</fullName>
    <description>[EBH] (EPH-145) - Channel</description>
    <label>Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Message Centre</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>GCX Outreach (Phone)</fullName>
            </value>
            <value>
                <fullName>GCX Inbound (Phone)</fullName>
            </value>
            <value>
                <fullName>Banners (onsite)</fullName>
            </value>
            <value>
                <fullName>Banners (Mobile in App)</fullName>
            </value>
            <value>
                <fullName>Mobile Push Notification</fullName>
            </value>
            <value>
                <fullName>Seller Centre</fullName>
            </value>
            <value>
                <fullName>Landing Page Required</fullName>
                <label>Landing Page</label>
            </value>
            <value>
                <fullName>Events</fullName>
                <label>Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>