unpackaged/main/default/objects/Campaign/fields/EBH_ContentClassification__c.field-meta.xml
<CustomField>
    <fullName>EBH_ContentClassification__c</fullName>
    <description>[EBH] (EPH-5624) - to capture content classification</description>
    <label>Content Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eBay shop updates</fullName>
            </value>
            <value>
                <fullName>eBay selling basics</fullName>
            </value>
            <value>
                <fullName>Shipping, Handling &amp; Returns</fullName>
            </value>
            <value>
                <fullName>Product, Policy and Compliance Updates</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Promotion Tools</fullName>
            </value>
            <value>
                <fullName>Inventory Guidance</fullName>
            </value>
            <value>
                <fullName>Listing &amp; Fullfilment Optimization</fullName>
            </value>
            <value>
                <fullName>Selling Promotions</fullName>
            </value>
            <value>
                <fullName>Cross Border Trade</fullName>
            </value>
            <value>
                <fullName>Webinar &amp; Video Guidance</fullName>
            </value>
            <value>
                <fullName>Seller Events</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>