unpackaged/main/default/objects/Campaign/fields/EBH_Control_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>EBH_Control_Group_Type__c</fullName>
    <inlineHelpText>Please indicate if a control group is needed for this campaign.</inlineHelpText>
    <label>Control Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Random</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>