unpackaged/main/default/objects/Campaign/fields/EBH_ControlGroupSize__c.field-meta.xml
<CustomField>
    <fullName>EBH_ControlGroupSize__c</fullName>
    <description>[EBH] (US-0067) : Control Group Size</description>
    <inlineHelpText>Please indicate the Control Group Size if a random control group is proposed.</inlineHelpText>
    <label>Proposed Control Group Size (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>