unpackaged/main/default/objects/Campaign/fields/EBH_DateApproved__c.field-meta.xml
<CustomField>
    <fullName>EBH_DateApproved__c</fullName>
    <description>[EBH] (EPH-147) - Date Approved</description>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>