unpackaged/main/default/objects/Campaign/fields/EBH_DateConvertedtoCampaign__c.field-meta.xml
<CustomField>
    <fullName>EBH_DateConvertedtoCampaign__c</fullName>
    <description>[EBH] (EPH-154) - Date Converted to Campaign</description>
    <label>Date Converted to Campaign</label>
    <type>Date</type>
</CustomField>