unpackaged/main/default/objects/Campaign/fields/EBH_DateSubmitted__c.field-meta.xml
<CustomField>
    <fullName>EBH_DateSubmitted__c</fullName>
    <description>[EBH] (EPH-154) - Date Submitted</description>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>