unpackaged/main/default/objects/Campaign/fields/EBH_DaysInFeasibility__c.field-meta.xml
<CustomField>
    <fullName>EBH_DaysInFeasibility__c</fullName>
    <description>[EBH] (EPH-154) - Days In Feasibility</description>
    <formula>EBH_DateApproved__c - EBH_DateConvertedtoCampaign__c</formula>
    <label>Days In Feasibility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>