unpackaged/main/default/objects/Campaign/fields/EBH_DaysInPreparation__c.field-meta.xml
<CustomField>
    <fullName>EBH_DaysInPreparation__c</fullName>
    <description>[EBH] (EPH-154) - Days In Preparation</description>
    <formula>StartDate  - EBH_DateApproved__c</formula>
    <label>Days In Preparation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>