unpackaged/main/default/objects/Campaign/fields/EBH_DaysPendingFeasibility__c.field-meta.xml
<CustomField>
    <fullName>EBH_DaysPendingFeasibility__c</fullName>
    <description>[EBH] (EPH-154) - Days Pending Feasibility</description>
    <formula>EBH_DateConvertedtoCampaign__c -  EBH_DateSubmitted__c</formula>
    <label>Days Pending Feasibility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>