unpackaged/main/default/objects/Campaign/fields/EBH_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>EBH_Dependencies__c</fullName>
    <description>[EBH] (EPH-154) - Dependencies</description>
    <label>Dependencies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>