unpackaged/main/default/objects/Campaign/fields/EBH_Description__c.field-meta.xml
<CustomField>
    <fullName>EBH_Description__c</fullName>
    <defaultValue>&quot;1) What is your campaign about: &lt;fill in text&gt;&quot; &amp;br()&amp;
&quot;2) What is the action you want sellers to take: &lt;fill in text&gt;&quot; &amp;br()&amp;
&quot;3) Other information &lt;fill in text&gt;&quot;</defaultValue>
    <description>[EBH] (EPH-2905) : Please fill in details of your campaign and any other information that can support your request.</description>
    <inlineHelpText>Please fill in details of your campaign and any other information that can support your request.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>