unpackaged/main/default/objects/Campaign/fields/EBH_EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>EBH_EmailTemplate__c</fullName>
    <description>[EBH] (EPH-71) - Email Template</description>
    <label>Email Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>