unpackaged/main/default/objects/Campaign/fields/EBH_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>EBH_ExternalID__c</fullName>
    <description>[EBH] (US-0067) : External ID</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>