unpackaged/main/default/objects/Campaign/fields/EBH_FirstResponseDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_FirstResponseDate__c</fullName>
    <description>[EBH] (EPH-1880) - Date of FIRST response of the contact in this campaign</description>
    <label>First Response Date</label>
    <type>Date</type>
</CustomField>