unpackaged/main/default/objects/Campaign/fields/EBH_GrandParent__c.field-meta.xml
<CustomField>
    <fullName>EBH_GrandParent__c</fullName>
    <description>WAVE  parent Campaigns Bindings relevant field :  Created by VM 1907</description>
    <formula>CASESAFEID(Parent.ParentId)</formula>
    <inlineHelpText>Parent Campaign retrieval for WAVE dashboards.</inlineHelpText>
    <label>GrandParent</label>
    <type>Text</type>
</CustomField>