unpackaged/main/default/objects/Campaign/fields/EBH_IdInChannel__c.field-meta.xml
<CustomField>
    <fullName>EBH_IdInChannel__c</fullName>
    <description>[EBH] (EPH-3300) : Id In Channel</description>
    <label>Id In Channel</label>
    <length>200</length>
    <type>Text</type>
</CustomField>