unpackaged/main/default/objects/Campaign/fields/EBH_KPI__c.field-meta.xml
<CustomField>
    <fullName>EBH_KPI__c</fullName>
    <description>[EBH] (EPH-1806) Action you want seller to take</description>
    <inlineHelpText>Please describe the challenge you are trying to solve and goal you are trying to reach with this campaign.</inlineHelpText>
    <label>Action you want seller to take</label>
    <length>255</length>
    <type>Text</type>
</CustomField>