unpackaged/main/default/objects/Campaign/fields/EBH_LatestPossibleStartDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_LatestPossibleStartDate__c</fullName>
    <description>[EBH] (EPH-1806) -  Please indicate the flexibility of your Campaign Start Date. Strict = same date as the Campaign Start Date; Flexible = latest date the Campaign can start</description>
    <inlineHelpText>Please indicate the flexibility of your Campaign Start Date. Strict = same date as the Campaign Start Date; Flexible = latest date the Campaign can start</inlineHelpText>
    <label>Latest Possible Start Date</label>
    <type>Date</type>
</CustomField>