unpackaged/main/default/objects/Campaign/fields/EBH_Launch__c.field-meta.xml
<CustomField>
    <fullName>EBH_Launch__c</fullName>
    <description>[EBH] (EPH-1880) - Internal Campaign Launch ID</description>
    <label>Launch</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>