unpackaged/main/default/objects/Campaign/fields/EBH_LinktoPreview__c.field-meta.xml
<CustomField>
    <fullName>EBH_LinktoPreview__c</fullName>
    <description>[EBH] (EPH-3300) : Link to Preview</description>
    <label>Link to Preview</label>
    <type>Url</type>
</CustomField>