unpackaged/main/default/objects/Campaign/fields/EBH_MemberLastRefreshDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_MemberLastRefreshDate__c</fullName>
    <description>[EBH] (EPH-5624) - to capture member last refresh date when refresh members button has been clicked</description>
    <label>Member Last Refresh Date</label>
    <type>DateTime</type>
</CustomField>