unpackaged/main/default/objects/Campaign/fields/EBH_NameInChannel__c.field-meta.xml
<CustomField>
    <fullName>EBH_NameInChannel__c</fullName>
    <description>[EBH] (EPH-3300) : Name In Channel</description>
    <label>Name In Channel</label>
    <length>200</length>
    <type>Text</type>
</CustomField>