unpackaged/main/default/objects/Campaign/fields/EBH_NumberofCampaignMembers__c.field-meta.xml
<CustomField>
    <fullName>EBH_NumberofCampaignMembers__c</fullName>
    <description>[EBH] (EPH-3308) - To have number of campaign members associated.</description>
    <label>Number of Campaign Members</label>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>