unpackaged/main/default/objects/Campaign/fields/EBH_NumberOfContactsinTL__c.field-meta.xml
<CustomField>
    <fullName>EBH_NumberOfContactsinTL__c</fullName>
    <formula>EBH_SellerList__r.EBH_NumberofContacts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Contacts in TL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>