unpackaged/main/default/objects/Campaign/fields/EBH_NumberofSellersBlacklisted__c.field-meta.xml
<CustomField>
    <fullName>EBH_NumberofSellersBlacklisted__c</fullName>
    <formula>EBH_SellerList__r.EBH_NumberofSellersBlacklisted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Sellers Blacklisted in TL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>