unpackaged/main/default/objects/Campaign/fields/EBH_NumberofSellersInTL__c.field-meta.xml
<CustomField>
    <fullName>EBH_NumberofSellersInTL__c</fullName>
    <description>[EBH] (EPH-5628) - to display number of Sellers</description>
    <formula>EBH_SellerList__r.EBH_NumberOfSelectedSellers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Sellers in TL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>