unpackaged/main/default/objects/Campaign/fields/EBH_NumberofSellersMarketingWithoutOptIn__c.field-meta.xml
<CustomField>
    <fullName>EBH_NumberofSellersMarketingWithoutOptIn__c</fullName>
    <formula>EBH_SellerList__r.EBH_NumberofSellersWithoutMarketingOptIn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Sellers not Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>