unpackaged/main/default/objects/Campaign/fields/EBH_NumberofTargetedSellers__c.field-meta.xml
<CustomField>
    <fullName>EBH_NumberofTargetedSellers__c</fullName>
    <description>[EBH] (EPH-1880) - Number of Targeted Sellers, this is a manual input on Master Campaign request which gets converted into Master Campaign record type</description>
    <label>Estimated Number of Targeted Sellers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>