unpackaged/main/default/objects/Campaign/fields/EBH_OutreachDetailifany__c.field-meta.xml
<CustomField>
    <fullName>EBH_OutreachDetailifany__c</fullName>
    <defaultValue>&quot;Criteria for leadpool identification: &lt;i.e. Seller segmentation criteria&gt;&quot; &amp; BR() &amp; BR() &amp;
&quot;Estimated leadpool size (indicative, will be verified by Seller Growth): &lt;i.e. how many sellers to contact for each channel&gt;&quot; &amp; BR() &amp; BR() &amp;
&quot;# of decision maker calls: &lt;i.e. how many decision makers out of your total leadpool do you want us to talk to&gt;&quot; &amp; BR()</defaultValue>
    <description>[EBH] (EPH-2905) : Outreach Detail (if any)</description>
    <label>Outreach Detail (if any)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>