unpackaged/main/default/objects/Campaign/fields/EBH_ParentCampaignName_WAVE__c.field-meta.xml
<CustomField>
    <fullName>EBH_ParentCampaignName_WAVE__c</fullName>
    <description>[EBH] (EPH-2201) - Testing Field for WAVE integration on Campaign Dashboard  Created by VM 25:06</description>
    <formula>Parent.Name</formula>
    <inlineHelpText>WAVE integration relevant and must be hidden on the layouts</inlineHelpText>
    <label>Parent Campaign Name</label>
    <type>Text</type>
</CustomField>