unpackaged/main/default/objects/Campaign/fields/EBH_PostLaunchTrackingPeriodWeeks__c.field-meta.xml
<CustomField>
    <fullName>EBH_PostLaunchTrackingPeriodWeeks__c</fullName>
    <description>[EBH] (EPH-3300) : EBH_PostLaunchTrackingPeriodWeeks</description>
    <label>Post-Launch Tracking Period (Weeks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>