unpackaged/main/default/objects/Campaign/fields/EBH_PreLaunchTrackingPeriodWeeks__c.field-meta.xml
<CustomField>
    <fullName>EBH_PreLaunchTrackingPeriodWeeks__c</fullName>
    <description>[EBH] (EPH-3300) : Pre-Launch Tracking Period (Weeks)</description>
    <label>Pre-Launch Tracking Period (Weeks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>