unpackaged/main/default/objects/Campaign/fields/EBH_Priorities__c.field-meta.xml
<CustomField>
    <fullName>EBH_Priorities__c</fullName>
    <description>[EBH] (EPH-1806) - Priorities</description>
    <label>Priorities</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mandatory Product, Policy, and Compliance Plans</fullName>
            </value>
            <value>
                <fullName>Monetisation &amp; Commercial Model</fullName>
            </value>
            <value>
                <fullName>Lifecycle Management</fullName>
            </value>
            <value>
                <fullName>Inventory Management</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>