unpackaged/main/default/objects/Campaign/fields/EBH_PriorityDescription__c.field-meta.xml
<CustomField>
    <fullName>EBH_PriorityDescription__c</fullName>
    <description>[EBH] (EPH-1806) - Priority Description</description>
    <inlineHelpText>P1 = business critical, e.g., compliance, significant change, etc., 
P2 = strategically important</inlineHelpText>
    <label>Priority Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
                <default>true</default>
                <label>P2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>