unpackaged/main/default/objects/Campaign/fields/EBH_Reached__c.field-meta.xml
<CustomField>
    <fullName>EBH_Reached__c</fullName>
    <description>[EBH] (EPH-1880) - Aggregated field to count reached campaign members. This is a custom roll up summary field on Campaign as well</description>
    <inlineHelpText>Aggregated number of seller contacts reached</inlineHelpText>
    <label>Reached</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>