unpackaged/main/default/objects/Campaign/fields/EBH_ReachedContacts__c.field-meta.xml
<CustomField>
    <fullName>EBH_ReachedContacts__c</fullName>
    <description>[EBH] Reached Contacts</description>
    <formula>IF(OR(RecordType.DeveloperName = &quot;EBH_SubCampaign&quot;,RecordType.DeveloperName ==&quot;EBH_AMOutreach&quot;), 
   NumberOfResponses , 
   IF(OR(RecordType.DeveloperName = &quot;EBH_Campaign&quot;, 
   RecordType.DeveloperName = &quot;EBH_CampaignProgramme&quot;), HierarchyNumberOfResponses , null) 
)</formula>
    <label>Reached Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>