unpackaged/main/default/objects/Campaign/fields/EBH_ReachedDistinctContacts__c.field-meta.xml
<CustomField>
    <fullName>EBH_ReachedDistinctContacts__c</fullName>
    <description>[EBH] (EPH-1880) - Calculated field that identifies the number of unique Contacts reached from the Campaign Members</description>
    <inlineHelpText>Number of unique Contacts reached from the Campaign Members</inlineHelpText>
    <label>Reached Distinct Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>