unpackaged/main/default/objects/Campaign/fields/EBH_ReadyToSend__c.field-meta.xml
<CustomField>
    <fullName>EBH_ReadyToSend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-71) - Ready To Send: When Number of Approvers = Number of Emails Approved, It sets true</description>
    <label>Ready To Send</label>
    <type>Checkbox</type>
</CustomField>