unpackaged/main/default/objects/Campaign/fields/EBH_RecordLink__c.field-meta.xml
<CustomField>
    <fullName>EBH_RecordLink__c</fullName>
    <description>[EBH] (EPH-2926) - to send email notifications with lightning URLs</description>
    <formula>$Setup.EBH_LightningURL__c.EBH_URL__c + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lightning Record Link</label>
    <type>Text</type>
</CustomField>