unpackaged/main/default/objects/Campaign/fields/EBH_Recurring__c.field-meta.xml
<CustomField>
    <fullName>EBH_Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (US-0067) : Recurring</description>
    <inlineHelpText>Please check if the campaign will occur periodically or repeatedly.</inlineHelpText>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>